<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout android:focusable="true" android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView 
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone" />

            <Chronometer 
                android:id="@+id/chronometer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text|textMultiLine|time"
                android:lineSpacingExtra="1dp"
                android:lines="1"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
              
                android:text="start" />

            <Button
                android:id="@+id/lapButton"
                android:layout_width="wrap_content"
                
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:text="lap" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:enabled="false"
                android:text="finish" />

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                
                android:layout_height="50dp"
                android:src="@drawable/save_icon"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout android:focusable="true" android:focusableInTouchMode="true"
            android:id="@+id/opcionesGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Estilo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Sexo"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Nacimiento"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/piscina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="piscina"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView android:focusable="true" android:focusableInTouchMode="true"
                    android:id="@+id/nombreNadador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Nombre:"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/Spinner03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/prueba"
             android:prompt="@string/prueba_prompt" />

                <Spinner
                    android:id="@+id/Spinner02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/sexo"
             android:prompt="@string/sexo_prompt" />

                <Spinner
                    android:id="@+id/Spinner01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/edad"
             android:prompt="@string/edad_prompt" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/piscina"
             android:prompt="@string/piscina_prompt" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Inserte nombre nadador" >
                </EditText>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/guardar"
            style="@style/ButtonColor"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Guardar"
            android:visibility="gone" />

    </LinearLayout>
    </ScrollView>

   

